# 4dvar-vqe

./: README.md  pyproject.toml  requirements.txt
document/: ALGORITHM.md  ALGORITHM.tex
experiments/: plot_lorenz96_qubo_phase.py  run_demo.py  run_lorenz63.py  run_lorenz96_qubo.py
outputs/: lorenz96_train_qubo_result.csv
runners/: compare_lorenz96_qubo_variants.py  generate_lorenz96_dataset.py  plot_lorenz96_baseline_compare.py  run_demo.py  run_lorenz63.py  run_lorenz96_qubo.py  run_lorenz96_second_order_qubo.py
src/q4dvar/: __init__.py  classical_4dvar.py  data_loader.py  lorenz96.py  plotting.py  problem.py  quantum_vqe.py  qubo_4dvar.py  toy_model.py
src/q4dvar/models/: __init__.py  lorenz96.py  toy.py
src/q4dvar/solvers/: __init__.py  _compat.py  baselines.py  classical.py  greedy.py  qaoa.py  qubo.py  second_order_qubo.py  vqe.py
src/q4dvar/solvers/4dvar/: __init__.py  classical.py  greedy.py  qaoa.py  qubo.py  second_order_qubo.py  vqe.py
